; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_start.c_bootstrap.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_start.c_bootstrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"%s %s\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"Bootstrap error : %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.skynet_context*, i8*)* @bootstrap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bootstrap(%struct.skynet_context* %0, i8* %1) #0 {
  %3 = alloca %struct.skynet_context*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.skynet_context*, align 8
  store %struct.skynet_context* %0, %struct.skynet_context** %3, align 8
  store i8* %1, i8** %4, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @strlen(i8* %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = add nsw i32 %12, 1
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %6, align 8
  %16 = alloca i8, i64 %14, align 16
  store i64 %14, i64* %7, align 8
  %17 = load i32, i32* %5, align 4
  %18 = add nsw i32 %17, 1
  %19 = zext i32 %18 to i64
  %20 = alloca i8, i64 %19, align 16
  store i64 %19, i64* %8, align 8
  %21 = load i8*, i8** %4, align 8
  %22 = call i32 @sscanf(i8* %21, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %16, i8* %20)
  %23 = call %struct.skynet_context* @skynet_context_new(i8* %16, i8* %20)
  store %struct.skynet_context* %23, %struct.skynet_context** %9, align 8
  %24 = load %struct.skynet_context*, %struct.skynet_context** %9, align 8
  %25 = icmp eq %struct.skynet_context* %24, null
  br i1 %25, label %26, label %32

26:                                               ; preds = %2
  %27 = load i8*, i8** %4, align 8
  %28 = call i32 @skynet_error(i32* null, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i8* %27)
  %29 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %30 = call i32 @skynet_context_dispatchall(%struct.skynet_context* %29)
  %31 = call i32 @exit(i32 1) #4
  unreachable

32:                                               ; preds = %2
  %33 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %33)
  ret void
}

declare dso_local i32 @strlen(i8*) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @sscanf(i8*, i8*, i8*, i8*) #1

declare dso_local %struct.skynet_context* @skynet_context_new(i8*, i8*) #1

declare dso_local i32 @skynet_error(i32*, i8*, i8*) #1

declare dso_local i32 @skynet_context_dispatchall(%struct.skynet_context*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
